	- Add parameter allow_update to control whether the screen is
	  updated after moving.  If it's TRUE, call edit_refresh() after
	  edit_update(). (DLR)
  do_gotopos()
	- Only include this function when DISABLE_SPELLER isn't defined,
	  as the alternate spell checking code is now the only place
	  where it's used. (DLR)
  do_find_bracket()
	- Add comments and minor cleanups. (DLR)
  find_history(), get_history_completion()
	- Make parameters const where possible. (DLR)
- text.c:
  do_word_count()
	- Rename to do_wordlinechar_count(), and expand to also count
	  the number of lines and characters in the file or selection,
	  as wc does. (DLR)
- winio.c:
  get_word_kbinput()
	- Multiply the entered digits by hexadecimal numbers instead of
	  decimal numbers for clarity, rename to get_unicode_kbinput(),
	  and rename variables word and word_digits to uni and
	  uni_digits. (DLR)
  parse_verbatim_kbinput()
	- Rename variables word_mb and word_mb_len to uni_mb and
	  uni_mb_len. (DLR)
  display_string()
	- Instead of using parse_mbchar()'s bad_chr parameter, use
	  mbrep() to get the representation of a bad character. (DLR)
  edit_redraw(), edit_refresh()
	- Clean up and simplify. (DLR)
  edit_update()
	- Since we no longer use TOP, remove references to it.  Also,
	  don't call edit_refresh() anymore; it will call us. (DLR)
  do_statusbar_next_word()
	- Rework to be more like do_statusbar_prev_word(), to avoid a
	  potential problem if we start at the end of a line. (DLR)
  do_statusbar_input()
	- Call do_statusbar_mouse() instead of do_mouse(). (DLR)
  do_statusbar_output()
	- When adding a character, just add its length in bytes to
	  statusbar_x instead of calling do_statusbar_right(). (DLR)
  titlebar()
	- Rework to display only one space after the version number, so
	  that there's more room for other things, and to not display
	  the status when we're in the file browser, since Pico doesn't.
	  (DLR)
- configure.ac: